@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: export attacktype to scripting.
+Nicolas Weeger 2010-04-18
+
 CRE: display items count, and if filtered total count.
 Nicolas Weeger 2010-04-18
 
